Add YouHaveTrouble optimization guide + JVM flag docs + fix threshold/flag inaccuracies + script robustness
References:
- Add references/optimization-guide-youhavetrouble.md (MC 1.21.11 guide)
- jvm-flags-advanced.md: document UseLargePages/LargePageSizeInBytes, UseDynamicNumberOfGCThreads,
  UseVectorCmov, PerfDisableSharedMem, -Xlog:gc*, sculptor.* props; add Large Pages + GC Logging sections
- jvm-gc-tuning.md: fix fabricated Aikar's flags (G1OldCSetSetThresholdThreshold -> G1OldCSetRegionThresholdPercent,
  drop PerTenureThreshold/duplicate SurvivorRatio/-javaagent), fix UseLargePages bad-flag entry
- spark_toolkit_commands.md: fix plugin-profile flags (no --thread), add pipeline section+row, complete check-config flags
- spark_toolkit_output.md / performance-standards.md / lag-diagnosis.md: reconcile MSPT P95/P90/Max thresholds
  to match assess_mspt() code (<=30 GOOD / <=45 WARNING / >45 CRITICAL)
- cpu-analysis.md: fix multi-core CPU% table (25%=1core@25%, 100%=1core, 400%=4cores)
- performance-standards.md: align CPU steal tiers with cpu-analysis.md 5-tier scale
- gc-analysis-guide.md: standardize ZGC crossover (consider 16GB / recommend 24GB / mandatory 32GB)
- SKILL.md: add analyze-gc/analyze-tps/analyze-cpu/recommend to command table, remove stale cpu-analysis
  dup block, enumerate all 10 bug-configs, define BRAKE WARNING jargon, register new reference

Script (scripts/spark_toolkit.py):
- Surface real parse errors instead of swallowing silently (parse_protobuf_file warns with last error)
- Distinguish protobuf-not-installed vs corrupt-file in error messages (via _ensure_proto check)
- Print fetch errors to stderr instead of silently returning None,None
- Add errors=replace to UTF-8 text reads (open_file, load_data gz/plain JSON) to match heapdump_analyzer.py
- Move warnings import to top-level